{
    "materialAppTitle": "Study Without Pen!",
    "nonso_register": "Register",
    "nonso_signInUp": "Sign In/Up",
    "nonso_email": "Email",
    "nonso_next": "Next",
    "nonso_cancel": "Cancel",
    "nonso_invalidEmail": "This an invalid email",
    "nonso_refresh": "Refresh account",
    "nonso_verifyEmailAddress": "Check your email inbox to verify your email address",
    "nonso_signOut": "Sign out",
    "nonso_signIn": "Sign in",
    "nonso_resendVerificationEmail": "Resend verification email",
    "nonso_name": "Name",
    "nonso_password": "Password",
    "nonso_confirmPassword": "Confirm Password",
    "nonso_forgotPassword": "Forgot password?",
    "nonso_resetCodeSent": "Check your email inbox to reset your password",
    "nonso_nameValidationError": "Enter your name",
    "nonso_failed": "Failure: {exceptionCode}",
    "@nonso_failed": {
        "placeholders": {
            "exceptionCode": {
                "type": "String"
            }
        }
    },
    "nonso_success": "Success: Check your email inbox to verify your email address.",
    "nonso_passwordValidationError": "Password needs to be at least {passwordMinimumLength} characters",
    "@nonso_passwordValidationError": {
        "placeholders": {
            "passwordMinimumLength": {
                "type": "int"
            }
        }
    },
    "nonso_confirmPasswordValidationError": "This doesn't match the given password",
    "createField": "Create Field",
    "createFieldList": "Create Field List",
    "createEntry": "Create Entry",
    "fieldName": "Field Name",
    "fieldListName": "Field List Name",
    "selectColor": "Select Color",
    "ok": "Ok",
    "cancel": "Cancel",
    "fieldNameValidationError": "Field name must be between {fieldNameMinimumLength} and {fieldNameMaximumLength} characters",
    "@fieldNameValidationError": {
        "placeholders": {
            "fieldNameMinimumLength": {
                "type": "int"
            },
            "fieldNameMaximumLength": {
                "type": "int"
            }
        }
    },
    "fieldListNameValidationError": "Field list name must be between {fieldListNameMinimumLength} and {fieldListNameMaximumLength} characters",
    "@fieldListNameValidationError": {
        "placeholders": {
            "fieldListNameMinimumLength": {
                "type": "int"
            },
            "fieldListNameMaximumLength": {
                "type": "int"
            }
        }
    },
    "questionValidationError": "Question must be between {questionMinimumLength} and {questionMaximumLength} characters",
    "@questionValidationError": {
        "placeholders": {
            "questionMinimumLength": {
                "type": "int"
            },
            "questionMaximumLength": {
                "type": "int"
            }
        }
    },
    "answerValidationError": "Answer must be between {answerMinimumLength} and {answerMaximumLength} characters",
    "@answerValidationError": {
        "placeholders": {
            "answerMinimumLength": {
                "type": "int"
            },
            "answerMaximumLength": {
                "type": "int"
            }
        }
    },
    "orderValidationError": "Order must be between {orderMinimumLength} and {orderMaximumLength}",
    "@orderValidationError": {
        "placeholders": {
            "orderMinimumLength": {
                "type": "int"
            },
            "orderMaximumLength": {
                "type": "int"
            }
        }
    },
    "scoreDescription": "{numberOfDisplayedEntries}/{numberOfEntries} entries ordered by score descendingly",
    "@scoreDescription": {
        "placeholders": {
            "numberOfDisplayedEntries": {
                "type": "int"
            },
            "numberOfEntries": {
                "type": "int"
            }
        }
    },
    "strugglingDescription": "{numberOfDisplayedEntries}/{numberOfEntries} entries with a 60%+ wrongness rate",
    "@strugglingDescription": {
        "placeholders": {
            "numberOfDisplayedEntries": {
                "type": "int"
            },
            "numberOfEntries": {
                "type": "int"
            }
        }
    },
    "todayDescription": "{numberOfDisplayedEntries}/{numberOfEntries} entries created today",
    "@todayDescription": {
        "placeholders": {
            "numberOfDisplayedEntries": {
                "type": "int"
            },
            "numberOfEntries": {
                "type": "int"
            }
        }
    },
    "unseenDescription": "{numberOfDisplayedEntries}/{numberOfEntries} entries from previous days yet to be studied",
    "@unseenDescription": {
        "placeholders": {
            "numberOfDisplayedEntries": {
                "type": "int"
            },
            "numberOfEntries": {
                "type": "int"
            }
        }
    },
    "browseDescription": "{numberOfDisplayedEntries}/{numberOfEntries} entries indexed by order and alphabet",
    "@browseDescription": {
        "placeholders": {
            "numberOfDisplayedEntries": {
                "type": "int"
            },
            "numberOfEntries": {
                "type": "int"
            }
        }
    },
    "searchDescription": "Search result for \"{searchText}\"",
    "@searchDescription": {
        "placeholders": {
            "searchText": {
                "type": "String"
            }
        }
    },
    "defaultSearchDescription": "Search result is displyed here",
    "created": "Created",
    "creationError": "Error while creation",
    "noFields": "Currently, there are no fields!",
    "noEntries": "Currently, there are no entries!",
    "failureLoadingFields": "An error occurred while loading the fields!",
    "failureLoadingData": "An error occurred while loading the data!",
    "failureLoadingEntries": "An error occurred while loading entries!",
    "failureLoadingNotes": "An error occurred while loading notes!",
    "failureLoadingSearchResult": "An error occurred while loading search result!",
    "noFieldLists": "Currently, there are no lists!",
    "selectCheckType": "Select check type",
    "howAppCheckAnswers": "How app checks your answers",
    "nonStrictIgnoreCase": "Do not check letter case or space",
    "ignoreCase": "Do not check letter case",
    "nonStrictDoNotIgnoreCase": "Do not check space",
    "doNotIgnoreCase": "Check both letter case and space",
    "readAnswer": "Read answer",
    "whenAnsweredCorrectly": "When you answer correctly!",
    "question": "Question",
    "answer": "Answer",
    "low": "Low",
    "normal": "Normal",
    "important": "Important",
    "vital": "Vital",
    "order": "Order",
    "optional": "Optional",
    "create": "Create",
    "duplicatedEntry": "Failure: already exists!",
    "score": "Score",
    "struggling": "Struggling",
    "today": "Today",
    "unseen": "Unseen",
    "browse": "Browse",
    "search": "Search",
    "wrongness": "Wrongness",
    "study": "Study",
    "test": "Test",
    "mastered": "Mastered",
    "needsFocus": "Needs Focus",
    "enterYourAnswer": "Enter your answer",
    "check": "Check",
    "signOut": "Sign out",
    "about": "About",
    "notes": "Notes",
    "lists": "Lists",
    "entries": "Entries"
}